# windows-mcp-server

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
src/: config.rs  lib.rs  main.rs  observability.rs
src/server/: handler.rs  mod.rs
src/tools/: disk.rs  eventlog.rs  mod.rs  network.rs  performance.rs  ping.rs  process.rs  registry.rs  service.rs  startup.rs  sysinfo_advanced.rs  system.rs  task.rs  user.rs  windowsupdate.rs
src/transport/: http.rs  mod.rs  stdio.rs
tests/: ping_tool.rs
