[package]
name = "windows-mcp-server"
version = "0.1.0"
edition = "2024"
description = "A comprehensive Windows Management MCP Server"
license = "MIT"
keywords = ["mcp", "rmcp", "windows", "management"]
categories = ["network-programming", "os"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5", features = ["derive", "env"] }
rmcp = { version = "1.6.0", features = [
    "server",
    "macros",
    "transport-io",
    "transport-streamable-http-server",
] }
schemars = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.30"
tokio = { version = "1.52.2", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "io-std",
    "net",
] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
hyper = { version = "1", features = ["server"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }
tower-service = "0.3"

[dev-dependencies]
tokio = { version = "1.52.2", features = ["io-util", "macros", "rt-multi-thread"] }
# `client` feature is needed only by the integration test, which drives a
# round-trip tool call through an in-process MCP client/server pair.
rmcp = { version = "1.6.0", features = ["client"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_NetworkManagement_NetManagement",
] }

[lints.clippy]
# Enable default clippy groups
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Deny common foot-guns at workspace level. Tests opt back in
# explicitly with #[allow(clippy::unwrap_used, clippy::expect_used)].
unwrap_used = "deny"
expect_used = "deny"

# Pedantic lints that fight the rmcp/derive style with no payoff:
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
